--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="shortcut icon" href="images/formarico.png" type="image/x-icon">
     
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <!-- Pogo Slider CSS -->
     <link rel="stylesheet" href="css/pogo-slider.min.css">
     <!-- Site CSS -->
