--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
   
                         </li>
 			<li><a class="nav-link" href="contact">Contactanos</a></li>
-			<?php
+			<!--<?php
 			if(isset($_SESSION['usuario']) || isset($_SESSION['privilegios'])){
 			echo'<li><a class="nav-link" href="login"><i class="fas fa-user-circle"></i> Aula Virtual</a></li>
 			        <li><a class="nav-link" href="cerrar_sesion_be"><i class="fas fa-sign-out-alt"></i></a></li>';
 			} else echo '<li><a class="nav-link" href="login"><i class="fas fa-user-circle"></i> Login</a></li>';
 			
-                 ?> 
+                 ?> -->
                     </ul>
                 </div>
             </div>
